apps/aiops-playbook/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aiops-service
  namespace: aiops

  labels:
    app: aiops-playbook

spec:
  selector:
    app: aiops-playbook

  ports:
    - name: http
      port: 80
      targetPort: 3000
